# bonsai-firmware

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  esp32.yml
ci/: projects.yml
components/ocs_core/: CMakeLists.txt  console_json_writer.cpp  console_json_writer.h  ijson_reader.h  ijson_writer.h
components/ocs_net/: CMakeLists.txt  wifi_network.cpp  wifi_network.h
components/ocs_status/: code.h  code_to_str.cpp
components/scs/: CMakeLists.txt  Kconfig  adc_reader.cpp  adc_reader.h  console_telemetry_writer.cpp  console_telemetry_writer.h  control_pipeline.cpp  control_pipeline.h  control_task.cpp  control_task.h  data_pipeline.cpp  data_pipeline.h  fanout_telemetry_writer.cpp  fanout_telemetry_writer.h  gpio_config.cpp  gpio_config.h  http_command_handler.cpp  http_command_handler.h  http_pipeline.h  itelemetry_reader.h  itelemetry_writer.h  project_pipeline.cpp  project_pipeline.h  registration_formatter.cpp  registration_formatter.h  soil_moisture_monitor.cpp  soil_moisture_monitor.h  soil_status_monitor.cpp  soil_status_monitor.h  system_pipeline.cpp  system_pipeline.h  telemetry.cpp  telemetry.h  telemetry_formatter.cpp  telemetry_formatter.h  telemetry_holder.cpp  telemetry_holder.h  yl69_moisture_reader.cpp  yl69_moisture_reader.h
components/scs/test/: CMakeLists.txt  test_soil_status_monitor.cpp
docs/: httpserver.md
docs/install/: esp32.md
docs/sensors/: capacitive_v1_2.md  ds18b20.md  sht41.md  yl69.md
main/: CMakeLists.txt  Kconfig  adc_reader.cpp  adc_reader.h  cjson_array_formatter.cpp  cjson_array_formatter.h  cjson_builder.h  cjson_formatter.h  cjson_object_formatter.cpp  cjson_object_formatter.h  console_json_writer.cpp  console_json_writer.h  console_telemetry_writer.cpp  console_telemetry_writer.h  control_pipeline.cpp  control_pipeline.h  ds18b20_pipeline.cpp  ds18b20_pipeline.h  fanout_telemetry_writer.cpp  fanout_telemetry_writer.h  gpio_config.cpp  gpio_config.h  http_command_handler.cpp  http_command_handler.h  http_registration_handler.cpp  http_registration_handler.h  http_server.cpp  http_server.h  http_telemetry_writer.cpp  http_telemetry_writer.h  ijson_reader.h  ijson_writer.h  itelemetry_reader.h  itelemetry_writer.h  main.cpp  noncopyable.h  project_pipeline.cpp  project_pipeline.h  registration_formatter.cpp  registration_formatter.h  (+15 more)
projects/: config.yml
projects/bonsai-growlab/: CMakeLists.txt  README.md
projects/bonsai-growlab-local/: CMakeLists.txt  README.md  package-lock.json
projects/bonsai-growlab-local/main/: main.cpp  project_pipeline.h  sht41_pipeline.h
projects/bonsai-growlab-local/web-gui/: README.md  eslint.config.js  package.json  vite.config.js
projects/bonsai-growlab/main/: CMakeLists.txt  Kconfig  control_pipeline.cpp  control_pipeline.h  ds18b20_pipeline.cpp  ds18b20_pipeline.h  project_pipeline.cpp  project_pipeline.h  sht41_pipeline.cpp  sht41_pipeline.h  soil_pipeline.cpp  soil_pipeline.h
projects/bonsai-growlab/web-gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
projects/bonsai-zero-a-1/: CMakeLists.txt  README.md
projects/bonsai-zero-a-1/main/: CMakeLists.txt  Kconfig  project_pipeline.cpp  project_pipeline.h
projects/bonsai-zero-a-1/web-gui/: README.md  index.html
projects/bonsai-zero-a-2/: CMakeLists.txt  README.md
projects/bonsai-zero-a-2/main/: Kconfig  main.cpp  project_pipeline.cpp  project_pipeline.h
projects/bonsai-zero-a-2/web-gui/: index.html  package-lock.json  vite.config.js
projects/bonsai-zero-ar-1/: CMakeLists.txt  README.md  partitions.csv
projects/bonsai-zero-ar-1/main/: Kconfig  project_pipeline.cpp  project_pipeline.h
schematics/: schematics.kicad_pro  schematics.kicad_sch
tests/: CMakeLists.txt
(+12 files in other folders)
